WebRoot/js/zimbraMail/config/style/dwt.css
/* ... */
/*
 * XForms things
 *
 * Please don't change the below, if you think you need to, come talk to Owen
 *
 */


/* RENAME ME */
.redAsteric {
	color: rgb(250, 0, 0);
}



/* widgets */
.xform_table {
	border-collapse:collapse;
	padding:0;
}
.xform_composite_table {
	border-collapse:collapse;
	padding:0;
}

.xform_field_container,
.xform_select_container,
.xform_output_container
{
	padding:2px;
}


.xform_field,
.xform_select,
.xform_select1,
.xform_textarea,
.xform_output,
.xform_button,
.xform_anchor{

}

.xform_output {
	padding-left:2px;
	padding-right:2px;
}

.xform_select1 {

}

.xform_select {
  height:100px;
  width:200px;
}

.xform_label,
.xform_label_left {
  color:#666666;
  padding-left:4px;
  padding-right:2px;
  white-space:nowrap;
  text-align:right;
}

.xform_label_left {
  padding-left:0;
  text-align:left;
}


.xform_separator {
  width:100%;
  height:1;
  border-bottom:1px solid black;
  font-size:1px;
}

.xform_button {
	background-image:url(/zimbra/img/hiRes/dwt/ButtonSmallUp__H.gif);
	border:1px outset #999999;	
	white-space:nowrap;
}

.xform_button_default {
	background-image:url(/zimbra/img/hiRes/dwt/ButtonSmallUp__H.gif);
	border:2px outset #999999;	
	white-space:nowrap;
}



/* "small" button grid */

.xform_button_grid_small {}
.xform_button_grid_small_table {
	border-collapse:collapse;
	padding:0;
}
.xform_button_grid_small_table td {
	padding:0;
}

.xform_button_grid_small_button {
	cursor:pointer;
	width:12px;
	height:12px;
	padding:3px;
	background-color:white;
	border:1px outset gray;
	margin:1px;
	text-align:center;
}
.xform_button_grid_small_button_selected {
	cursor:pointer;
	width:12px;
	height:12px;
	padding:3px;
	background-color:gray;
	border:1px inset gray;
	margin:1px;
	text-align:center;
}



/* "medium" button grid */

.xform_button_grid_medium {}
.xform_button_grid_medium_table {
	border-collapse:collapse;
	padding:2;
}
.xform_button_grid_medium_table td {
	padding:2;
}
.xform_button_grid_medium_button {
	cursor:pointer;
	white-space:nowrap;
	overflow:hidden;
	width:40px;
	padding:3px;
	background-color:white;
	border:1px outset gray;
	text-align:center;
}
.xform_button_grid_medium_button_selected {
	cursor:pointer;
	white-space:nowrap;
	overflow:hidden;
	width:40px;
	padding:3px;
	background-color:gray;
	border:1px inset gray;
	text-align:center;
}


.GrouperBorder,
.RadioGrouperBorder,
.TopGrouperBorder {
	border:1px solid #999999;
	margin-top:5px;
	margin-bottom:5px;

	padding-top:5px;
	padding-left:10px;
	padding-bottom:10px;
}

.TopGrouperBorder {
	border:1px dotted #999999;
	border-left:none;
	border-right:none;
	border-bottom:none;
	margin-top:20px;
	padding-bottom:0px;
	margin-bottom:0px;
}

.GrouperLabel,
.RadioGrouperLabel {
	display: inline;
	font-weight:bold;
	font-size:13px;
	position:relative;
	left:10; 
	top:-15;
	background-color:#EEEEEE;
	padding-left:2px; padding-right:2px;
}

.GrouperInset {

}

.RadioGrouperInset {

}

.RadioGrouperBorder {
	border:1px solid #999999;
	margin-bottom:2px;

}

HTML>BODY .RadioGrouperBorder {
	border:1px dotted #999999;
}

.RadioGrouperLabel {
	margin-left:5px;
	color:#666666;
	font-weight:normal;
	font-size:11px;
}

HTML>BODY .RadioGrouperLabel {
	margin-left:-5px;
}

.quotabar {
	width: 100px;
	border: 1px solid white;
	background-color: white;
}

.quotaused {
	height: 6px;
	font-size: 6px; /* WEIRD IE QUIRK */
}

.percent {
	white-space: nowrap;
	font-size: 7pt;
	color: black;
}






/*
 * Xforms -- OSelect FormItem Widget
 */

.oselect, .oselect_check {
	cursor:pointer;
}
.oselect_table,
.oselect_check_table {
	background-image:url(/zimbra/img/hiRes/dwt/ButtonUp__H.gif);
	border-collapse:collapse;
	border:1px solid;
	border-color:#CCCCCC #333333 #333333 #CCCCCC;
	padding:0;
}
.oselect_table TD,
.oselect_check_table TD {
	padding:0;
}
.oselect_display {
	white-space:nowrap;
	overflow:hidden;
	margin-left:4px;
	margin-right:4px;
	height:15;
	border-style:none;
	border-color:#EEEEEE;
	background-image:url(/zimbra/img/hiRes/dwt/ButtonUp__H.gif);
}

.oselect_display_disabled {
    background-color: #EEEEEE;
	color: #CCCCCC;
	white-space:nowrap;
	overflow:hidden;
	margin-left:4px;
	margin-right:4px;
}

.oselect_table_disabled {
	background-color: #EEEEEE;
	border-collapse:collapse;
	color: #CCCCCC;
	border-left:1px solid #EEEEEE;
	border-top:1px solid #EEEEEE;
	border-right:1px solid gray;
	border-bottom:1px solid gray;
}

.oselect_choice_table_scrolled {
	border-collapse:collapse;
	border-left:1px solid #CCCCCC;
	border-top:0px;
	border-right:0px;
	border-bottom:1px solid black;
}

.oselect_menu {
	background-color:white;
	position:absolute;
	z-index:10000000000;
	cursor:pointer;
}
.oselect_choice_table,
.oselect_check_choice_table {
	border-collapse:collapse;
	border:1px solid;
	border-color:#CCCCCC black black #CCCCCC;
}
.oselect_choice {
	background-color:white;
	border:1px solid white;
	padding-left:4px;
	padding-top:1px;
	padding-bottom:1px;
	margin-right:1px;
	white-space:nowrap;
}
.oselect_choice_selected {
	background-image:url(/zimbra/img/hiRes/dwt/ButtonUp__H.gif);
	border:1px solid;
	border-color:#CCCCCC black black #CCCCCC;
	padding-left:4px;
	padding-top:1px;
	padding-bottom:1px;
	margin-right:1px;
	white-space:nowrap;
}

.oselect_check_choice {
	background-color:white;
	color:black;
	padding:4px;
	white-space:nowrap;
}
.oselect_check_choice_selected {
	color:black;
	background-color:FFFF66;
	padding:4px;
}

.xform_error { color: red }

.DwtConfirmDialogQuestion {
	font-size: 1.2em;
	margin: .25em;
	margin-bottom: 0.50em;
}

.DwtMenuCascadeCell {
	border-left: solid gray 1px;
}

/*
 * DwtChooser
 */

.DwtChooser {
	width: 100%;
}

.DwtChooser-Active {
	border: 1px solid #000000;
}

.DwtChooserListView {
	border: 1px solid #000000;
	margin: 5 5 5 5;
}

