http://bugzilla.zimbra.com/show_bug.cgi?id=7036 Bug: 7036
IE: style of "width: 100%" for DwtChooser was
causing contact picker to get a width of 11080,
which is too big

Copied from Perforce
 Change: 23995

--- a/WebRoot/js/zimbraMail/config/style/dwt.css
+++ b/WebRoot/js/zimbraMail/config/style/dwt.css
@@ -1254,10 +1254,6 @@ HTML>BODY .RadioGrouperLabel {
  * DwtChooser
  */
 
-.DwtChooser {
-	width: 100%;
-}
-
 .DwtChooser-Active {
 	border: 1px solid #000000;
 }
